manifests/scoreserver-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: scoreserver
  name: scoreserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scoreserver
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: scoreserver
    spec:
      containers:
        - image: "localhost:5001/scoresvr"
          name: scoresvr
          imagePullPolicy: Always
        - image: "localhost:5001/nginx:1.26.3"
          name: nginx
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: scoresvr-nginx-config
              mountPath: "/etc/nginx/conf.d"
      volumes:
        - name: scoresvr-nginx-config
          configMap:
            name: scoresvr-nginx-config
