manifests/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: scoreserver
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
  clusterIP: None
