manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scoreserver-service
spec:
  selector:
    app: scoreserver
  ports:
    - port: 80 
      targetPort: 8000
