manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scoreserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: scoreserver.info
    http:
      paths:
      - pathType: Prefix
        path: /scoreserver(/|$)(.*)
        backend:
          service:
            name: scoreserver-service
            port:
              number: 80
